--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
    <link rel="stylesheet" href="style.css" >
-  <title>CV(Iqra Bashir)</title>
+  <title>CV(Hamna Mahmood)</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
 </div>
     <div class="contact-info">
       <p><i class="fa fa-phone"></i> +923108329962</p>
-      <p><i class="fa fa-envelope"></i> iqrabashir914@gmail.com</p>
+      <p><i class="fa fa-envelope"></i> hamnamahmood004@gmail.com</p>
       <p><i class="fa fa-map-marker"></i> Khalid colony phase 2, Chakri road, Rawalpindi</p>
     </div>
   
