--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <img src="images.png" alt="Profile Image" class="profile-img">
 
   <div class="profile-details">
-    <h1>IQRA BASHIR</h1>
+    <h1>Hamna Mahmood</h1>
     <h3><i>Video Editor</i></h3>
 </div>
     <div class="contact-info">
