--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hamna Mahmood - CV</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <div class="cv-container">
-    <!-- Profile Section -->
-    <div class="profile">
+
+    <!-- Header / Profile -->
+    <header class="profile-header">
       <img src="images.png" alt="Profile Image" class="profile-img">
       <div class="profile-info">
         <h1>HAMNA MAHMOOD</h1>
         <h3>Software Engineer</h3>
         <div class="contact">
-          <p><i class="fa fa-phone"></i> +9246789012</p>
+          <p><i class="fa fa-phone"></i> +92567656120</p>
           <p><i class="fa fa-envelope"></i> 23-22411-025.se.fjwu.edu.pk</p>
           <p><i class="fa fa-map-marker"></i> Rawalpindi, Pakistan</p>
         </div>
       </div>
-    </div>
+    </header>
 
     <hr>
 
@@ -29,8 +30,8 @@
     <section>
       <h2>Objective</h2>
       <p>
-        To obtain a responsible position in a well-established organization where I can contribute effectively
-        and continue developing my professional skills.
+        Seeking a responsible position in a dynamic organization where I can utilize my skills,
+        contribute to projects, and grow professionally.
       </p>
     </section>
 
@@ -42,11 +43,11 @@
       <div class="experience">
         <div class="exp-item">
           <p class="exp-date">07/2024 - 09/2024</p>
-          <p class="exp-role"><strong>Junior Intern</strong> - Internship with Syrbid Group of Companies, Islamabad </p>
+          <p class="exp-role"><strong>Junior Intern</strong> - Internship with Syrbid Technologies, Islamabad</p>
         </div>
         <div class="exp-item">
           <p class="exp-date">30/05/2024 - 05/06/2024</p>
-          <p class="exp-role"><strong>Developer</strong> - Work with IP Centric Technologies, Islamabad</p>
+          <p class="exp-role"><strong>Junior Developer</strong> - CyberSpace Technologies, Islamabad"</p>
         </div>
       </div>
     </section>
@@ -59,15 +60,15 @@
       <div class="education">
         <div class="edu-item">
           <p class="edu-date">2023 - Present</p>
-          <p class="edu-degree"><strong>Bachelors in SOftware Engineering</strong><br>Fatima Jinnah Women University, Rawalpindi</p>
+          <p class="edu-degree"><strong>Bachelors in Software Engineering</strong><br>Fatima Jinnah Women University, Rawalpindi</p>
         </div>
         <div class="edu-item">
-          <p class="edu-date">2021- 2023</p>
+          <p class="edu-date">2021 - 2023</p>
           <p class="edu-degree"><strong>ICS</strong><br>Concepts College of Sciences, Rawalpindi</p>
         </div>
         <div class="edu-item">
           <p class="edu-date">2019 - 2021</p>
-          <p class="edu-degree"><strong>Sciences Group</strong><br>Fauji Foundation College for Girls, Rawalpindi</p>
+          <p class="edu-degree"><strong>Pre-Medical</strong><br>Fauji Foundation College for Girls, Rawalpindi</p>
         </div>
       </div>
     </section>
@@ -76,11 +77,24 @@
 
     <!-- Skills -->
     <section>
-      <h2>Technical Skills</h2>
-      <ul>
-        <li><strong>Programming:</strong> HTML, CSS, C++, Java, Python, Dart</li>
-        <li><strong>Office Tools:</strong> MS Word, MS Excel, MS PowerPoint, MS Access</li>
-        <li><strong>IDEs and other tools</strong> VS Code, Visual Studio, Dev C++, Dartpad, Canva, Adobe Illustartor,,</li>
+      <h2>Skills</h2>
+      <ul class="skills-list">
+        <li>HTML, CSS, C++, Java, Python, Dart</li>
+        <li>MS Office (Word, Excel, PowerPoint, Access)</li>
+        <li>VS Code, Visual Studio, Dartpad, Dev C++,Canva, Adobe Illustrator, Figma</li>
+      </ul>
+    </section>
+
+    <hr>
+
+    <!-- Projects -->
+    <section>
+      <h2>Other Projects</h2>
+      <ul class="projects-list">
+        <li>University Management System</li>
+        <li>Hotel Management System</li>
+        <li>Mental Stress Coping System Database</li>
+        <li>Library Management System</li>
       </ul>
     </section>
 
@@ -89,8 +103,10 @@
     <!-- Languages -->
     <section>
       <h2>Languages</h2>
-      <p><strong>Mother Tongue:</strong> Urdu</p>
-      <p><strong>Other Languages:</strong> English</p>
+      <ul class="languages">
+        <li>Mother Tongue: Urdu</li>
+        <li>Other Languages: English (Speaking, Reading, Writing, Listening)</li>
+      </ul>
     </section>
 
     <hr>
@@ -98,9 +114,10 @@
     <!-- References -->
     <section>
       <h2>References</h2>
-      <p><strong>Assistant Professor:</strong> Ms. Sarah Akhtar Hashmi<br>Email: sarahashmi12@gmail.com | Contact: +92356789009</p>
-      <p><strong>Associate Professor:</strong> Dr. Shazia Hashmat<br>Email: shaziahashmat67@gmail.com | Contact: +9231244467898</p>
+      <p><strong>Assistant Professor:</strong> Ms. Sarah Akhtar Hashmi | Email: sarahashmi23@gmail.com | Contact: +92236776541</p>
+      <p><strong>Associate Professor:</strong> Dr. Shazia Hashmat | Email: shaziahashmat78@gmail.com | Contact: +923356743210</p>
     </section>
+
   </div>
 </body>
 </html>
